--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
 name = "invoice"
+author = "Alexandre Borghi <borghi.alexandre.12@gmail.com>"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = "1.0.136"
+serde = { version = "1.0.136", features = ["derive"] }
 serde_yaml = "0.8.23"
+clap = { version = "3.1.18", features = ["derive"] }
