--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 serde = { version = "1.0.136", features = ["derive"] }
 serde_yaml = "0.8.23"
 clap = { version = "3.1.8", features = ["derive"] }
+handlebars = "4.2.2"
