--- a/invoice.yaml
+++ b/invoice.yaml
@@ -3,29 +3,34 @@
 #   Corrected typo : donées -> données
 
 number: 2022-001
-issued: 2022-05-13
-shipped: 2022-05-12
+issued: 17/05/2022
+shipped: 12/05/2022
 
 company:
     name: Alexandre Borghi
-    address_line_1: 6 Lieu-Dit Kerbodig
-    address_line_2: 56250 Saint-Nolff
-    phone: 0679480774
+    activity: Conseil en informatique
+    address: 
+        - 6 Lieu-Dit Kerbodig
+        - 56250 Saint-Nolff
+    phone: 
+        display: 06 79 48 07 74
+        intl: "+33679480774"
     website: www.aborghi.fr
-    email: contact@aborghi.fr
+    mail: contact@aborghi.fr
     siret: "91266790400011"
 
 client:
     name: Dremml
-    address_line_1: 12 Rue du Pont à Tan
-    address_line_2: 56230 Questembert
+    address:
+        - 12 Rue du Pont à Tan
+        - 56230 Questembert
 
 detail:
     # Scheme:
     #   description: String
-    #   amount: f32 = 1.0
-    #   unit: Heures | Unités = Heures
-    #   unit_price: f32 = 50.0
+    #   amount: f64 = 1.0
+    #   unit: hours | units = hours
+    #   unit_price: f64 = 50.0
 
     - description: Structure de données utilisateur
     - description: Page de connexion
@@ -36,3 +41,7 @@ detail:
     - description: Page d'administration de profil
     - description: Système de traduction
       amount: 2.0
+
+payment:
+    - type: virement # virement | cb | espece | cheque
+    - delay: 60 # in days
